--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="midia">
                     <img src="DS.jpeg/DS.jpeg" alt="Estudantes do curso de DS trabalhando em projeto prático">
                     <div class="video-container">
-                        <iframe width="100%" height="315" src="https://youtu.be/L61VM6wPFwY?si=pmMHPxE9MYiSOmZf" frameborder="0" allowfullscreen></iframe>
+                        <iframe width="100%" height="315" src="https://youtu.be/L61VM6wPFwY?feature=shared" frameborder="0" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
@@ -47,7 +47,7 @@
                     <h3>Perigos da IA</h3>
                     <p>A Inteligência Artificial, apesar de seus avanços promissores, apresenta diversos perigos que exigem atenção e regulamentação cuidadosa.</p>
                     <div class="video-container">
-                        <iframe width="100%" height="315" src="https://youtu.be/aJLm6wfvE4M?si=cdZrfShrosHPNDa1" frameborder="0" allowfullscreen></iframe>
+                        <iframe width="100%" height="315" src="https://youtu.be/CmAcro8YblU?feature=shared" frameborder="0" allowfullscreen></iframe>
                     </div>
                 </div>
                 
@@ -55,7 +55,7 @@
                     <h3> Aqui estão alguns exemplos</h3>
                     <p>Viés e Discriminação, Perda de Privacidade, Deslocamento de Trabalhadores, Decisões Opacas, Armamento Autônomo, Dependência Excessiva, Manipulação e Desinformação e entre outras.</p>
                     <div class="video-container">
-                        <iframe width="100%" height="315" src="https://youtu.be/-3VK7qF-6dY?si=qrpMBD5oD7WwtfEO" frameborder="0" allowfullscreen></iframe>
+                        <iframe width="100%" height="315" src="https://youtu.be/i6xbl9QzIK0?feature=shared" frameborder="0" allowfullscreen></iframe>
                     </div>
                 </div>
                 
@@ -79,7 +79,7 @@
                 <div class="midia">
                     <img src="imagens/SETEC.jpeg" alt="Visão futurista da SETEC com tecnologia avançada">
                     <div class="video-container">
-                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/VIDEO_ID_6" frameborder="0" allowfullscreen></iframe>
+                        <iframe width="100%" height="315" src="https://youtu.be/IH-wBijX53M?feature=shared" frameborder="0" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
