--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <h3>Perigos da IA</h3>
                         <p>A Inteligência Artificial, apesar de seus avanços promissores, apresenta diversos perigos que exigem atenção e regulamentação cuidadosa.</p>
                         <div class="video-container">
-                            <iframe src="https://www.youtube.com/embed/CmAcro8YblU" frameborder="0" allowfullscreen></iframe>
+                          <a href="https://www.youtube.com/watch?v=CmAcro8YblU&t=3s">
                         </div>
                     </div>
                     
@@ -75,14 +75,14 @@
                         <h3>Exemplos de Perigos</h3>
                         <p>Viés e Discriminação, Perda de Privacidade, Deslocamento de Trabalhadores, Decisões Opacas, Armamento Autônomo, Dependência Excessiva, Manipulação e Desinformação e entre outras.</p>
                         <div class="video-container">
-                            <iframe src="https://www.youtube.com/embed/i6xbl9QzIK0" frameborder="0" allowfullscreen></iframe>
+                          <a href="https://www.youtube.com/watch?v=i6xbl9QzIK0&t=91s">
                         </div>
                     </div>
                 </div>
             </div>
         </section>
 
-        <!-- TERCEIRA SEÇÃO -->
+        <!-- TERCEIRA SEÇÃO -->'
         <section id="secao3" class="secao futurista">
             <div class="container">
                 <h2>SETEC: Visão Futurista</h2>
@@ -116,7 +116,7 @@
                             <p>Visão futurista da SETEC com IA integrada</p>
                         </div>
                         <div class="video-container">
-                            <iframe src="https://www.youtube.com/embed/IH-wBijX53M" frameborder="0" allowfullscreen></iframe>
+                               <a href="https://www.youtube.com/watch?v=IH-wBijX53M">
                         </div>
                     </div>
                 </div>
