--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
                             <p>Transparência algorítmica, Prestação de contas sobre decisões, Regulamentações governamentais, Auditorias independentes, Mecanismos de supervisão humana.</p>
                             <p>Sem essas salvaguardas, os riscos associados à IA podem superar seus benefícios, criando sérios problemas para a sociedade.</p>
                             <div class="video-container">
-                                <iframe src="https://youtu.be/5HP_w-Rtoqc?feature=shared" frameborder="0" allowfullscreen></iframe>
+                                <iframe src="https://www.youtube.com/embed/5HP_w-Rtoqc" frameborder="0" allowfullscreen></iframe>
                             </div>
                         </div>
                         
