--- a/index.html
+++ b/index.html
@@ -613,5 +613,15 @@ Variáveis de cores atualizadas - Azul mais escuro e personalizado */
             <p>SETEC - 2025</p>
         </div>
     </footer>
+    <nav>
+    <div class="container">
+        <ul>
+            <li><a href="index.html"><i class="fas fa-home"></i> Início</a></li>
+            <li><a href="curso.html"><i class="fas fa-laptop-code"></i> Curso</a></li>
+            <li><a href="ia.html"><i class="fas fa-brain"></i> IA</a></li>
+            <li><a href="setec.html"><i class="fas fa-microchip"></i> SETEC</a></li>
+        </ul>
+    </div>
+</nav>
 </body>
 </html>
