--- a/setec.html
+++ b/setec.html
@@ -398,7 +398,7 @@
     <!-- Rodapé -->
     <footer>
         <div class="container">
-            <h1>Laís Victória</h1>
+              <p>Desenvolvedora Laís Victória</p>
             <p>Projeto desenvolvido para a avaliação de Front-End - Curso de Desenvolvimento de Sistemas</p>
             <p>SETEC - 2025</p>
         </div>
